ejercicios de listas y tablas

--- a/HTML/quienes.html
+++ b/HTML/quienes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +27,6 @@
     <br>
     <h2 style="text-align:center"><b>Principio 1</b></h2>
     <p style="text-align:center"> <I>"Hacemos lo que creemos que es correcto para cada uno de nuestros clientes"</I> </b></p>
-    
 </body>
 </html>
 
